Add session to cookie, remove from URL (#269)
* Feature adding fernando resource (#266)

added a downloadable resource and link to the resources page

* typo fix

* Feature put sesh in cookie (#268)

* WIP removing sesh stuff

* WIP removing sesh stuff from server.js

* WIP some es6 updates, remove vars replace with const or let

* WIP weirdly we don't have logger here yet. Idk why, but we'll have to merge that in before deploying. So I removed logger for now and replaced them with console. I'll logger stuff in before deploying

* remove sesh from all views. i believe is ready to merge, but we're waiting until we have a finished greasemonkey script before doing that.

* resolve conflicts, removed console.logs

--- a/views/admin-browse-soles.hbs
+++ b/views/admin-browse-soles.hbs
@@ -1,6 +1,6 @@
 <div class="breadcrumb-wrapper">
-    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
-    <a href="/admin?sesh={{sesh}}" class="breadcrumb">Admin</a>
+    <a href="/" class="breadcrumb">Home</a>
+    <a href="/admin" class="breadcrumb">Admin</a>
     <a class="breadcrumb">Browse SOLEs</a>
 </div>
 
