--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -5,7 +5,7 @@
 </style>
 
 <div class="breadcrumb-wrapper">
-    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
+    <a href="/" class="breadcrumb">Home</a>
     <a class="breadcrumb">Admin</a>
 </div>
 
@@ -101,10 +101,10 @@
                     </ul>
                 </div>
                 <div class="card-action">
-                    <a href="/admin/browse-soles?sesh={{sesh}}">Browse All SOLEs</a>
-                    <a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>
-                    <a href="/pending-soles?sesh={{sesh}}">Pending SOLEs</a>
-                    <a href="/admin/events?sesh={{sesh}}">Conferences and Events</a>
+                    <a href="/admin/browse-soles">Browse All SOLEs</a>
+                    <a href="/admin/browse-users">Browse Users</a>
+                    <a href="/pending-soles">Pending SOLEs</a>
+                    <a href="/admin/events">Conferences and Events</a>
                 </div>
             </div>
         </div>
