--- a/views/fail.hbs
+++ b/views/fail.hbs
@@ -11,17 +11,12 @@
         </p>
       </div>
       {{/if}}
-            {{#if sesh}}
+
                 <div class="row center-align">
-                    <a class="red waves-effect waves-light btn" href="/?sesh={{sesh}}">
+                    <a class="red waves-effect waves-light btn" href="/">
                         Take Me Home
                     </a>
                 </div>
-            {{else}}
-                <div class="row center-align">
-                    <a class="red waves-effect waves-light btn" href="/login">Log In</a>
-                </div>
-            {{/if}}
             <div class="row center-align">
                 <a class="waves-effect waves-light btn" href="mailto:support@startsole.org"><i class="material-icons
                 right">mail</i>Contact Us</a>
