--- a/views/home.hbs
+++ b/views/home.hbs
@@ -7,14 +7,14 @@
             <div class="card-content center-align">
                 <img class="hide-on-small-only" src="/images/logos/logo.svg">
                 <h5 style="margin-bottom: 1em;">Let's get started</h5>
-                <a class="waves-effect waves-light btn-large" href="/sole-create?sesh={{sesh}}">Plan A Lesson</a>
+                <a class="waves-effect waves-light btn-large" href="/sole-create">Plan A Lesson</a>
                 <br><br>
             </div>
             <div class="card-action center-align">
-                <a href="/soles?sesh={{sesh}}">My SOLEs</a>
-                <a href="/questions?sesh={{sesh}}">Explore Questions</a>
+                <a href="/soles">My SOLEs</a>
+                <a href="/questions">Explore Questions</a>
                 <!--{{#if roleData.isAdmin }}-->
-                    <a class="red-text" href="/admin?sesh={{sesh}}">Admin</a>
+                    <a class="red-text" href="/admin">Admin</a>
                 <!--{{/if}}-->
              </div>
         </div>
@@ -23,16 +23,16 @@
             <!--<div class="card-content center-align">-->
                 <!--<h5 style="margin-bottom: 1em;">Admin Options</h5>-->
 
-                <!--<a class="waves-effect waves-light btn-large" href="/pending-soles?sesh={{sesh}}">Review Pending Soles</a>-->
+                <!--<a class="waves-effect waves-light btn-large" href="/pending-soles">Review Pending Soles</a>-->
                 <!--<br>-->
-                <!--or check out the full <a class="" href="/admin?sesh={{sesh}}">admin dashboard</a>-->
+                <!--or check out the full <a class="" href="/admin">admin dashboard</a>-->
 
                 <!--<br><br>-->
             <!--</div>-->
             <!--<div class="card-action center-align">-->
-                <!--<a href="/admin/browse-soles?sesh={{sesh}}">Browse All Soles</a>-->
-                <!--<a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>-->
-                <!--<a href="/admin/events?sesh={{sesh}}">Conferences</a>-->
+                <!--<a href="/admin/browse-soles">Browse All Soles</a>-->
+                <!--<a href="/admin/browse-users">Browse Users</a>-->
+                <!--<a href="/admin/events">Conferences</a>-->
             <!--</div>-->
         <!--</div>-->
         <!--{{/if}}-->
@@ -59,8 +59,8 @@
                         </div>
                     </div>
                     <div class="card-action center-align">
-                        <!--<a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>-->
-                        <a href="/dashboard?sesh={{../sesh}}&ring={{id}}">Dashboard</a>
+                        <!--<a href="/dashboard/question-approval">Question Approval</a>-->
+                        <a href="/dashboard?ring={{id}}">Dashboard</a>
                     </div>
                 </div>
             </div>
