--- a/views/partials/question-card.hbs
+++ b/views/partials/question-card.hbs
@@ -1,6 +1,6 @@
 <div class="card blue lighten-1 grid-item masonry-card">
     <div class="card-content center-align">
-        <a href="/questions/{{id}}?sesh={{../sesh}}">
+        <a href="/questions/{{id}}">
             <div class="card-title white-text">{{text}}</div>
         </a>
     </div>
