--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -19,26 +19,26 @@
         <li><div class="user-view">
             <div class="white center-align">
                 <!--<img src="/images/office.jpg">-->
-                <a href="/?sesh={{sesh}}"><img src="/images/{{config.logo}}"></a>
+                <a href="/"><img src="/images/{{config.logo}}"></a>
             </div>
             <!--<a href="#user"><img class="circle" src="/images/yuna.jpg"></a>-->
             <!--<a href="#name"><span class="white-text name">Justin Duffy</span></a>-->
             <!--<a href="#email"><span class="white-text email">South High Community School</span></a>-->
         </div></li>
         <li><div class="divider"></div></li>
-        <li><li><a class="waves-effect waves-light btn" href="/sole-create?sesh={{sesh}}">Plan Lesson</a></li></li>
+        <li><li><a class="waves-effect waves-light btn" href="/sole-create">Plan Lesson</a></li></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/profile?sesh={{sesh}}"><i class="material-icons">account_circle</i>My Profile</a></li>
-        <li><a class="waves-effect" href="/soles?sesh={{sesh}}"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
+        <li><a class="waves-effect" href="/profile"><i class="material-icons">account_circle</i>My Profile</a></li>
+        <li><a class="waves-effect" href="/soles"><i class="material-icons">format_list_bulleted</i>My SOLEs</a></li>
         <li><div class="divider"></div></li>
-        <li><a class="waves-effect" href="/questions?sesh={{sesh}}"><i class="material-icons">help</i>Explore Questions</a></li>
-        <li><a class="waves-effect" href="/questions/mine?sesh={{sesh}}"><i class="material-icons">question_answer</i>My Questions</a></li>
-        <li><a class="waves-effect" href="/questions/add?sesh={{sesh}}"><i class="material-icons">create</i>Add a Question</a></li>
+        <li><a class="waves-effect" href="/questions"><i class="material-icons">help</i>Explore Questions</a></li>
+        <li><a class="waves-effect" href="/questions/mine"><i class="material-icons">question_answer</i>My Questions</a></li>
+        <li><a class="waves-effect" href="/questions/add"><i class="material-icons">create</i>Add a Question</a></li>
         <li><div class="divider"></div></li>
         {{!-- <li><a class="waves-effect" href="/map"><i class="material-icons">public</i>Community Map</a></li> --}}
-        <li><a class="waves-effect" href="/how?sesh={{sesh}}" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
-        <li><a class="waves-effect" href="/history?sesh={{sesh}}" ><i class="material-icons">history</i>History of StartSOLE</a></li>
-        <li><a class="waves-effect" href="/resources?sesh={{sesh}}"><i class="material-icons">assignment</i>Teacher Resources</a></li>
+        <li><a class="waves-effect" href="/how" ><i class="material-icons">record_voice_over</i>How to SOLE</a></li>
+        <li><a class="waves-effect" href="/history" ><i class="material-icons">history</i>History of StartSOLE</a></li>
+        <li><a class="waves-effect" href="/resources"><i class="material-icons">assignment</i>Teacher Resources</a></li>
         <li><div class="divider"></div></li>
         <li><a class="waves-effect waves-light btn red hide-on-large-only hide-on-extra-large-only" href="/logout">Logout</a></li>
         <li><div class="divider hide-on-large-only hide-on-extra-large-only hide-on-small-and-down"></div></li>
