--- a/views/admin-conferences-and-events.hbs
+++ b/views/admin-conferences-and-events.hbs
@@ -1,6 +1,6 @@
 <div class="breadcrumb-wrapper">
-    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
-    <a href="/profile?sesh={{sesh}}" class="breadcrumb">Profile</a>
+    <a href="/" class="breadcrumb">Home</a>
+    <a href="/profile" class="breadcrumb">Profile</a>
     <a class="breadcrumb">Conferences and Events</a>
 </div>
 
