--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -40,4 +40,5 @@
   Parse.initialize(soleConfig.appId);
   Parse.serverURL = soleConfig.serverUrl;
   Parse.User.logOut();
+  document.cookie = "sessionToken=; Max-Age=0";//remove the sessionToken from the cookie
 </script>
