--- a/views/partials/question-templates.hbs
+++ b/views/partials/question-templates.hbs
@@ -3,7 +3,7 @@
 <script id="question-card-template" type="text/x-handlebars-template">
         <div class="card blue lighten-1 grid-item masonry-card">
             <div class="card-content center-align">
-                <a href="/questions/\{{id}}?sesh=\{{sesh}}">
+                <a href="/questions/\{{id}}">
                     <div class="card-title white-text">\{{text}}</div>
                 </a>
 
