--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -1,12 +1,12 @@
     <div class="card-panel sole-card">
         <a href="/soles/{{id}}{{#ifEquals state "reflect"}}/reflect{{else ifEquals state
-                "completed"}}{{else}}/edit{{/ifEquals}}?sesh={{sesh}}">
+                "completed"}}{{else}}/edit{{/ifEquals}}">
             <img src="/images/logos/sole-card-logo.jpg"
                  class="avatar-image hide-on-small-and-down">
         </a>
         <div class="question-text">
             <a href="/soles/{{id}}{{#ifEquals state "reflect"}}/reflect{{else ifEquals state
-                    "completed"}}{{else}}/edit{{/ifEquals}}?sesh={{sesh}}"
+                    "completed"}}{{else}}/edit{{/ifEquals}}"
                class="black-text">
                 {{question.text}}
                 {{lessonplan}}
@@ -28,29 +28,29 @@
         </span>
         </div>
     <div class="sole-action-buttons">
-        <a href="/soles/{{id}}/download-plan?sesh={{sesh}}"
+        <a href="/soles/{{id}}/download-plan"
            class="waves-effect waves-light green btn"
            target="_blank">
             Download Plan
         </a>
         {{#if completed}}
             <a class="waves-effect waves-light green btn"
-               href="/soles/{{id}}/download-summary?sesh={{sesh}}"
+               href="/soles/{{id}}/download-summary"
                target="_blank">
                 Download Summary
             </a>
         {{else}}
             <a class="waves-effect waves-light red btn"
-               href="/soles/{{id}}/reflect?sesh={{sesh}}">
+               href="/soles/{{id}}/reflect">
                 Reflect
             </a>
             <a class="btn-floating grey"
-               href="/soles/{{id}}/delete?sesh={{sesh}}">
+               href="/soles/{{id}}/delete">
                 <i class="material-icons">delete</i>
             </a>
         {{/if}}
         <a class="btn-floating grey"
-           href="/soles/{{id}}/copy?sesh={{sesh}}">
+           href="/soles/{{id}}/copy">
             <i class="material-icons">content_copy</i>
         </a>
     </div>
