--- a/views/soles-delete.hbs
+++ b/views/soles-delete.hbs
@@ -11,12 +11,11 @@
                 </h5>
                 <p>Are you sure you want to delete this SOLE?</p>
                 <form id="delete-form" method="post">
-                    <input type="hidden" name="sesh" id="sesh" value="{{sesh}}">
                     <input type="hidden" name="soleID" id="soleID" value="{{sole.id}}">
                     <button type="submit" class="waves-effect waves-light red btn-large">
                         Delete
                     </button>
-                    <a class="waves-effect waves-light btn-large" href="/soles?sesh={{sesh}}">Cancel</a>
+                    <a class="waves-effect waves-light btn-large" href="/soles">Cancel</a>
                 </form>
             </div>
         </div>
