--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -1,6 +1,6 @@
 <div class="breadcrumb-wrapper">
-    <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
-    <a href="/soles?sesh={{sesh}}" class="breadcrumb">My SOLEs</a>
+    <a href="/" class="breadcrumb">Home</a>
+    <a href="/soles" class="breadcrumb">My SOLEs</a>
     <a class="truncate truncate-question breadcrumb">{{sole.question.question.text}}</a>
 </div>
 
