--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -20,7 +20,7 @@
                         <i class="material-icons left">bookmark</i>
                         Favorite
                         </a>
-                        <a href="/sole-create&question={{question.id}}" class="teal waves-effect waves-light
+                        <a href="/sole-create?question={{question.id}}" class="teal waves-effect waves-light
                         btn">
                             <i class="material-icons left">assignment</i>
                             Create Lesson
@@ -92,7 +92,7 @@
                 <i class="material-icons">bookmark</i>
             </a>
             <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
-               href="/sole-create&question={{question.id}}"
+               href="/sole-create?question={{question.id}}"
                data-position="bottom"
                data-tooltip="Create Lesson Plan">
                 <i class="material-icons">assignment</i>
